[package]
name = "libnm"
description = "Rust bindings to libnm"
version = "0.2.0"
license = "GPL-3.0-or-later"
authors = ["Andreas Olofsson <ao@blazar.se>"]
repository = "https://github.com/AndreasOlofsson/libnm/"
edition = "2018"

[dependencies]
libnm-sys = "0.2.0"
glib = "0.10.2"
glib-sys = "0.10.1"
